login, signup, logout done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id = "home-screen">
+    <div id = "header-div">
         <h1>Welp</h1>
         <button id = "home-button">Home</button>
         <button id = "all-businesses-button">All Businesses</button>
@@ -21,6 +21,12 @@
         <button id = "list-businesses-button" class = "hidden">List Your Business</button>
         <button id = "logout-button" class = "hidden">Logout</button>
     </div>
+        <section id = "home-screen">
+
+            <h2>Home Page</h2>
+
+        </section>
+
         <section id = "signup-screen" class = "hidden">
             <form class="signup-form">
                 <h2 class="signup-header">Sign Up</h2>
