core functionality complete

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <section id="single-business-section" class="hidden">
         <div class='business-info-div'></div>
-        <div class='create-review-div'>
+        <div class='create-review-div hidden'>
             <form class="add-review-form">
                 <h2 class="review-form-header">Leave a review</h2>
                 <label for="review-title">Title</label>
@@ -95,6 +95,10 @@
                 </select>
                 <input type="submit" value="Create Review!">
             </form>
+        </div>
+        <h2>Reviews:</h2>
+        <div class = "display-reviews-div">
+            
         </div>
     </section>
 
