--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <input type="text" id="edit-business-description">
                 <label for="edit-business-type ">Type</label>
                 <select id="edit-business-type" name="type">
-                    <option value="Food">Food</option>
+                    <option value="Restaurants">Restaurants</option>
                     <option value="Arts & Entertainment">Arts & Entertainment</option>
                     <option value="Health & Medical">Health & Medical</option>
                     <option value="Professional Services">Professional Services</option>
@@ -143,8 +143,6 @@
                 <input type="submit" value="Edit Business!">
                 <button class = 'cancel'>Cancel</button>
             </form>
-            
-
     
         <div class='create-review-div hidden'>
             <form class="add-review-form">
@@ -164,6 +162,7 @@
                 <input type="submit" value="Create Review!">
             </form>
         </div>
+
         <div class = 'all-reviews'> 
             <h2>Reviews:</h2>
             <div class = "display-reviews-div"></div>
