displays name on load

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="home-screen">
 
         <h2>Home Page</h2>
-
+        <h3 class = 'hello'></h3>
     </section>
 
     <section id="signup-screen" class="hidden">
