--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
             </form>
         </div>
 
+        <div class = 'thanks-screen hidden'>
+            <h2>Thank You for Reviewing our Business!</h2>
+            <div class = editReviewButtons></div>
+        </div>
+
+
 
         <div class = 'all-reviews'> 
             <h2>Reviews:</h2>
