--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </form>
         </div>
 
-        <div class = 'thanks-screen hidden'>
+        <div class = 'thanks-screen'>
             <h2>Thank You for Reviewing our Business!</h2>
             <div class = editReviewButtons></div>
         </div>
