heroku final fix

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="shortcut icon" href= "https://doc-04-6g-docs.googleusercontent.com/docs/securesc/879lbso7ipjpc4qbur014o4q0n6i4nb5/64c2u38pq27elln3gr43spoeeonl176o/1618801350000/07537591489813376661/07537591489813376661/1IbjJBE9dtheoEEbaGRwT3INXbl2GZglo?authuser=0&nonce=sfd24l8os8832&user=07537591489813376661&hash=3qa7bitli133kq6qfbjb7j15m1lqebsk">
+    <link rel="shortcut icon" href="https://drive.google.com/uc?id=1IbjJBE9dtheoEEbaGRwT3INXbl2GZglo">
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
-<title>WELP</title>
 </head>
 
 <body>
